--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   # Configuração JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none # Deixar Flyway gerenciar
     show-sql: false
     properties:
       hibernate:
@@ -94,6 +94,8 @@ logging:
     org.springframework.security: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    # Logs do Flyway
+    org.flywaydb: INFO
     # Reduzir logs de email por padrão
     org.springframework.mail: WARN
     org.springframework.boot.actuate.mail: WARN
