--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 spring:
   # Configuração do banco de dados para desenvolvimento
   datasource:
-    url: jdbc:postgresql://localhost:5432/leilao_db
+    url: jdbc:mysql://localhost:3306/leilao_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
     username: ${DB_USERNAME:leilao_user}
     password: ${DB_PASSWORD:leilao_pass}
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 10
       minimum-idle: 5
@@ -20,11 +20,10 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         jdbc:
           time_zone: America/Sao_Paulo
-        default_schema: public
   
   # Configuração Flyway para desenvolvimento
   flyway:
@@ -33,8 +32,6 @@ spring:
     baseline-on-migrate: true
     validate-on-migrate: true
     clean-disabled: false # Permitir clean em desenvolvimento
-    schemas: public
-    default-schema: public
     # Configurações adicionais para debug
     baseline-version: 0
     baseline-description: "Initial baseline"
