--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none # Deixar Flyway gerenciar completamente
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
