Dashboard no front

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@angular/forms": "^20.3.15",
     "@angular/platform-browser": "^20.3.15",
     "@angular/router": "^20.3.15",
+    "chart.js": "^4.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -72,7 +73,9 @@
     "leilao",
     "auction",
     "frontend",
-    "typescript"
+    "typescript",
+    "dashboard",
+    "admin"
   ],
   "author": "Sistema de Leilão Eletrônico",
   "license": "MIT"
