--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -55,10 +55,12 @@ app:
     allowed-headers: "*"
     allow-credentials: true
   
-  # Configurações de Rate Limiting
+  # Configurações de Rate Limiting - História 5: Sprint S2.2
   rate-limit:
     enabled: true
     requests-per-minute: 60
+    admin-requests-per-minute: 120
+    report-requests-per-minute: 10
     burst-capacity: 100
   
   # Configurações de Email (padrão)
@@ -99,6 +101,8 @@ logging:
     # Reduzir logs de email por padrão
     org.springframework.mail: WARN
     org.springframework.boot.actuate.mail: WARN
+    # Rate limiting logs - História 5: Sprint S2.2
+    com.leilao.core.filter.RateLimitingFilter: INFO
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
